...
            <objects>
                <viewController id="BYZ-38-t0r" customClass="SignUpInViewController" customModule="Wunderlist" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="375" height="812"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Name" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="VmY-8J-LPj">
                                <rect key="frame" x="100" y="344" width="175" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" spellCheckingType="no" textContentType="username"/>
                            </textField>
                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Password" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="uyA-NO-dKT">
                                <rect key="frame" x="100" y="388" width="175" height="34"/>
                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                <textInputTraits key="textInputTraits" autocorrectionType="no" textContentType="password"/>
                            </textField>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Dv-ak-mId">
                                <rect key="frame" x="150" y="437" width="75" height="30"/>
                                <state key="normal" title="Sign In"/>
                                <connections>
                                    <action selector="signInTapped:" destination="BYZ-38-t0r" eventType="touchUpInside" id="LUh-Wb-RoM"/>
                                </connections>
                            </button>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="I1S-RW-g48">
                                <rect key="frame" x="75" y="482" width="225" height="30"/>
                                <state key="normal" title="Don't have an account?"/>
                                <connections>
                                    <action selector="changeSignType:" destination="BYZ-38-t0r" eventType="touchUpInside" id="yhB-bD-dyD"/>
                                </connections>
                            </button>
                        </subviews>
                        <color key="backgroundColor" systemColor="systemBackgroundColor" cocoaTouchSystemColor="whiteColor"/>
...
                                    <outlet property="delegate" destination="Lzx-zj-jM1" id="Iqn-nK-tXD"/>
                                </connections>
                            </tableView>
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ywJ-2a-UA9">
                                <rect key="frame" x="296" y="52" width="71" height="71"/>
                                <color key="backgroundColor" systemColor="systemBlueColor" red="0.0" green="0.47843137250000001" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="Wunderlist.addTask"/>
                                <constraints>
                                    <constraint firstAttribute="width" secondItem="ywJ-2a-UA9" secondAttribute="height" multiplier="1:1" id="iEC-Cn-sq3"/>
                                </constraints>
                                <inset key="contentEdgeInsets" minX="4" minY="4" maxX="4" maxY="4"/>
                                <state key="normal" title="Add Task">
                                    <color key="titleColor" systemColor="secondarySystemBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
