...
                            }
                            
                        } else {
                            NSLog("Sign up unsuccessful")
                            
                            DispatchQueue.main.async {
                                let alert = UIAlertController(title: "Error",
                                                              message: "Unable to sign up",
                                                              preferredStyle: .alert)
                                alert.addAction(UIAlertAction(title: "Dismiss",
                                                              style: .cancel,
                                                              handler: nil))
                                
                                self.present(alert, animated: true)
                            }

...
