...
        return frc
    }()
    
    override func viewDidLoad() {
        super.viewDidLoad()
        
        searchBar.accessibilityIdentifier = "Wunderlist.searchBar"
        
    }
    
    override func viewDidAppear(_ animated: Bool) {
        EntryController.shared.fetchEntriesFromAPI() {_ in
            DispatchQueue.main.async {
...
